# DS-with-Python

./: .gitignore  Makefile  README.md  pyproject.toml  queries.ipynb  sample.env
docs/: 1-Project_Setup.md  2-Create_DB.md  3-Basic_SQL.md
notebooks/: basic-sql.ipynb  create-db.ipynb
